add login on client side

--- a/src/main/webapp/Client_Pages/style.css
+++ b/src/main/webapp/Client_Pages/style.css
@@ -78,6 +78,12 @@ nav {
   
   margin: 0;
 	padding: 0;
+	background-image: url('imge/8.jpg'); 
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+
+	background-attachment: fixed;
 	
 	
 	
