--- a/src/main/webapp/Admin Pages/custom.css
+++ b/src/main/webapp/Admin Pages/custom.css
@@ -5,7 +5,7 @@ header {
 
 	
 	  color: #33FF00;
-      padding: 20px;
+      padding: 5px;
       width: 100%;
       box-sizing: border-box;
       border-radius: 25px;
@@ -14,9 +14,8 @@ header {
       border-top-right-radius: 0px;
       border-bottom-left-radius: 50px;
       border-bottom-right-radius: 50px;
-      position: fixed;
-      top: 0;
-      left:0;
+      
+      margin-top:0px;
       
 
 }
@@ -26,23 +25,35 @@ header {
 }
 
 nav {
+	
 	text-align: right;
+	margin-right: 40px;
+	font-weight: bold;
+	
+	position : absolute;
+	top:33;
+	right:0;
+	/* position: absolute; */
+	
+	
+	
+	/* text-align: right;
 	margin-right: 40px;
 	font-weight: bold;
 	position: absolute;
 	top: 35px;
-	right: 80px;
+	right: 80px; */
 }
 
 
 .A{
 	color: #001F3F;
 	background-color: 33FF99;
-	display: inline-block;
+	/* display: inline-block; */
 	padding: 9px;
 	border-radius: 10px;
 	text-decoration: none;
-	margin-right: 20px;
+	margin-right: 10px;
 	font-family: Arial, sans-serif;
 }
 
@@ -61,9 +72,7 @@ a:hover {
 	background-color:#6c757d;
 	color:white;
 	font-weight:600; 
-	position:absolute;
-	top:35px;
-	right:15px;
+	
 }
 #logout:hover{
 	background-color:#c82333;
@@ -73,9 +82,7 @@ a:hover {
 	background-color:#007bff;
 	color:white;
 	font-weight:600; 
-	position:absolute;
-	top:35px;
-	right:15px;
+	
 }
 #login:hover{
 	background-color:blue;
@@ -89,28 +96,22 @@ a:hover {
 footer {
 
 	
-	width: 100%;
-	color: #FFFFFF;
-	/* font color */
-	padding: 20px ;
-	width: 100%;
-	line-height: 7px;
-	/* Footer height */
-	
-	border-radius: 25px;
 	background-color: #001F3F;
-	/* #000066; */
-
-	border-top-left-radius: 50px;
-	border-top-right-radius: 50px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
-
-	text-align: center;
-	display:fixed;
-	margin-bottom:0;
-
-
+	padding:25px;
+	width:100%;
+	box-sizing:border-box;
+	
+	border-top-left-radius:50px;
+	border-top-right-radius:50px;
+	
+	color:White;
+	text-align:center;
+	line-height: 15px;
+	margin:0;
+	bottom:0;
+	margin-bottom: 0px;
+	margin-top:71px;
+	
 }
 
 
@@ -135,7 +136,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	
-	padding-top: 100px;
+	/* padding-top: 100px; */
 	
 	
 }
@@ -158,10 +159,6 @@ body {
     
 }
 
-.maincontent{
-	flex: 1;
-    padding: auto; 
-}
 
 .cards>div {
 	/*  background-color:  #004A6F; */
